# vicalib

./: .gitignore  .travis.yml  CMakeLists.txt  FindDNSSD.cmake  FindEigen3.cmake  FindGLEW.cmake  FindGLog.cmake  FindTinyXML2.cmake  README.md  vicalib-config.cmake.in
CMakeModules/: FindAndroidKernel.cmake  FindCeresSolver.cmake  FindOpenCL.cmake  FindOpenCV2.cmake  FindPkgMacros.cmake  FindUSB1.cmake  FindZeroMQ.cmake  PackageConfig.cmake.in  def_apk.cmake  def_executable.cmake  def_library.cmake  export_package.cmake
applications/: CMakeLists.txt
applications/vicalib/: CMakeLists.txt  main.cc
cmake_modules/: FindCeresSolver.cmake  FindGFlags.cmake  FindPCAN.cmake  FindTBB.cmake  LibFindMacros.cmake  install_package.cmake
data/: t26x-initialization.json
include/vicalib/: boxcar-filter.h  calibration-stats.h  calibration_keys.h  ceres-cost-functions.h  gl-line-strip.h  grid-definitions.h  interpolation-buffer.h  types.h  vicalib-engine.h  vicalib-task.h  vicalib.h  vicalib_interface.h  vicalibrator.h
include/visual-inertial-calibration/: boxcar-filter.h  calibration-stats.h  ceres-cost-functions.h  eigen-alignment.h  gl-line-strip.h  grid-definitions.h  interpolation-buffer.h  local-param-se3.h  types.h  vicalib-engine.h  vicalib-task.h  vicalibrator-utils.h  vicalibrator.h
meta_build/: .gitignore  CMakeLists.txt  Jenkinsfile  README.md
meta_build/CMake/: Android.toolchain.cmake  FindCMakeAll.cmake  c_flag_overrides.cmake  cxx_flag_overrides.cmake
meta_build/POSIX_shim/: CMakeLists.txt
meta_build/POSIX_shim/include/: unistd.h
meta_build/POSIX_shim/include/sys/: time.h
meta_build/Projects/: CXSparse.cmake  Calibu.cmake  Ceres.cmake  Ceres.patch  Eigen.cmake  FreeGLUT.cmake  GFlags.cmake  GLEW.cmake  GLog.cmake  HAL.cmake  OpenCV.cmake  POSIX_shim.cmake  Pangolin.cmake  Pangolin.patch  Sophus.cmake  Sophus.patch  SuiteSparse.cmake  dirent.cmake  dirent.patch  dlfcn-win32.cmake  protobuf.cmake  protobuf.patch  rapidjson.cmake  tinyxml2.cmake  tinyxml2.patch  vicalib.cmake
scripts/: run_benchmark.py  run_imu_calibration.sh  run_vicalib.py  run_vicalib_evaluation.py
src/: CMakeLists.txt  VICALIBConfig.cmake.in  VICALIBConfigVersion.cmake.in  libmain.cc  main.cc  tracker.cc  vicalib-engine.cc  vicalib-task.cc
src/vicalib/: calibration-stats.h  grid-definitions.h  vicalibrator-utils.h
testing/: CMakeLists.txt  testing_common.h  vi_sim_test.cpp
